--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -11,4 +11,10 @@
     color: white;
   }
 
+// input text make it label from modal
+.name {
+    background:rgba(0,0,0,0) !important;
+    border:none;
+}
+
  
