delete upload file -view is done but edit is redundant

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8542,13 +8542,16 @@ span.round-tab:hover {
 }
 
 #systemname:hover,
-#username {
+#username,
+#login,
+#register {
   color: black;
 }
 
 #systemname,
-#username {
-  padding-top: 50px;
+#username,
+#login,
+#register {
   color: white;
 }
 
