--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -210,11 +210,11 @@ span.round-tab:hover {
 .navbar-inverse{
     background-color: #2375BB;
 }
-#systemname:hover, #username{
+#systemname:hover, #username, #login, #register{
     color: black;
 }
-#systemname, #username{
-    padding-top:50px;
+#systemname, #username, #login, #register{
+    
     color: white;
 }
 
