--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8555,3 +8555,11 @@ span.round-tab:hover {
   color: white;
 }
 
+.errorcode {
+  color: white !important;
+}
+
+.errorcode {
+  color: white !important;
+}
+
