--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,5 +11,8 @@
 //Custom
 @import "custom";
 
+//Custom
+@import "error";
+
 // resources/assets/sass/app.scss
 // @import '~jquery-ui/themes/base/all.css';
