navbar to default, logo to blue

--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -207,18 +207,15 @@ span.round-tab:hover {
 //   padding: 16px 32px;
 }
 
-.navbar-inverse{
-    background-color: #2375BB;
-}
-#systemname:hover, #username, #login, #register{
-    color: black;
-}
-#systemname, #username, #login, #register{
+// NAVBAR DESIGN AND LOGO
+// .navbar-inverse{
+//     background-color: #2375BB;
+// }
+// #systemname:hover, #username, #login, #register{
+//     color: black;
+// }
+// #systemname, #username, #login, #register{
     
-    color: white;
-}
+//     color: white;
+// }
 
-
-.errorcode {
-    color: white !important;
-  }
